fixed login password and signup snackbar

--- a/TravelApp/DesktopHost/View/LoginView.xaml
+++ b/TravelApp/DesktopHost/View/LoginView.xaml
@@ -87,7 +87,7 @@
                    FontFamily="Poppins"
                    FontWeight="Regular"
                    HorizontalAlignment="Left">Password</Label>
-            <views:BindablePasswordBox 
+            <views:LoginPasswordBox 
                  Password="{Binding Password}"/>
         </StackPanel>
 
