--- a/TravelApp/DesktopHost/View/SignupView.xaml
+++ b/TravelApp/DesktopHost/View/SignupView.xaml
@@ -33,7 +33,8 @@
             <materialDesign:Snackbar MessageQueue="{Binding SnackbarMessageQueue}"
                                  Grid.Row="8"
                                  Grid.Column="1"
-                                 Margin="0,0,0,20">
+                                 Margin="0,0,0,20"
+                                 Panel.ZIndex="999">
                 <materialDesign:SnackbarMessage Content="{Binding SnackbarMessageQueue}" />
             </materialDesign:Snackbar>
 
