Finished the first row for agent all trips
First row: title, search, new trip and sort by

--- a/TravelApp/DesktopHost/View/Agent/AgentTripsView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentTripsView.xaml
@@ -6,28 +6,114 @@
              xmlns:local="clr-namespace:TravelApp.DesktopHost.View"
              mc:Ignorable="d" 
              d:DesignHeight="350" d:DesignWidth="800"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewmodel="clr-namespace:TravelApp.DesktopHost.ViewModel"
              d:DataContext="{d:DesignInstance Type=viewmodel:AgentTripsViewModel}"
-             xmlns:components="clr-namespace:TravelApp.DesktopHost.View">
+             xmlns:components="clr-namespace:TravelApp.DesktopHost.View"
+             SizeChanged="Window_SizeChanged">
     
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="4*" />
+            <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
         <components:AgentNavigationView Grid.Row="0" SelectedIndex="0"></components:AgentNavigationView>
 
-        <Button
-            Grid.Row="1"
-            Width="300"
-            Height="50"
-            Content="{ Binding WindowSize }"
-            ToolTip="Log out from your account"
-            Background="IndianRed"
-            Foreground="#ffffff"
-            FontSize="30"
-            FontWeight="Bold"
-            Command="{ Binding DisplayWindowSize }"/>
 
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Column="0" 
+                        Text="Stay&amp;Eat"
+                        FontSize="{Binding TextFontSize}"
+                        FontWeight="Medium"
+                        TextAlignment="Left"
+                        VerticalAlignment="Center"
+                        FontFamily="Poppins"
+                        MaxWidth="439"
+                        Margin="30 0 0 0"/>
+
+            <WrapPanel Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0 0 30 0">
+                <Button Cursor="Hand" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Padding="2" Margin="0 0 30 0">
+                    <StackPanel Orientation="Horizontal">
+                        <Viewbox Width="25" Height="25">
+                            <materialDesign:PackIcon Kind="Plus" VerticalAlignment="Center" />
+                        </Viewbox>
+                        <TextBlock Text="Add trip" FontFamily="Poppins" Grid.Column="1" Padding="5"  VerticalAlignment="Center" FontSize="20" Foreground="Black" TextDecorations="Underline"/>
+                    </StackPanel>
+                </Button>
+
+                <Border Width="200" Height="30" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="15">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <materialDesign:PackIcon Grid.Column="0" Kind="Magnify" VerticalAlignment="Center" Margin="5" />
+                        <Grid Grid.Column="1">
+                            <TextBox x:Name="myTextBox" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" FontFamily="Poppins" MaxLength="60" Background="Transparent" BorderThickness="0" Padding="5" VerticalContentAlignment="Center" FontSize="14" Foreground="Black" >
+                                <TextBox.Style>
+                                    <Style TargetType="TextBox">
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="TextBox">
+                                                    <Grid>
+                                                        <ScrollViewer x:Name="PART_ContentHost"/>
+                                                        <TextBlock Text="Search..." FontSize="14" FontFamily="Poppins" Foreground="Gray" VerticalAlignment="Center" Panel.ZIndex="1">
+                                                            <TextBlock.Style>
+                                                                <Style TargetType="TextBlock">
+                                                                    <Setter Property="Visibility" Value="Collapsed" />
+                                                                    <Style.Triggers>
+                                                                        <DataTrigger Binding="{Binding IsKeyboardFocused, RelativeSource={RelativeSource TemplatedParent}}" Value="False">
+                                                                            <Setter Property="Visibility" Value="Visible" />
+                                                                        </DataTrigger>
+                                                                    </Style.Triggers>
+                                                                </Style>
+                                                            </TextBlock.Style>
+                                                        </TextBlock>
+                                                    </Grid>
+                                                    <ControlTemplate.Triggers>
+                                                        <Trigger Property="IsKeyboardFocused" Value="True">
+                                                            <Setter TargetName="PART_ContentHost" Property="Visibility" Value="Visible" />
+                                                        </Trigger>
+                                                    </ControlTemplate.Triggers>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </TextBox.Style>
+                            </TextBox>
+                        </Grid>
+                    </Grid>
+                </Border>
+                <TextBlock
+                    Grid.Column="1"
+                    Grid.Row="1"
+                    Text="Sort by:"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Right"
+                    Margin="50 0 20 0"
+                    Foreground="Black"
+                    FontWeight="DemiBold"/>
+
+                <ComboBox
+                    SelectedIndex="0"
+                    SelectionChanged="ComboBox_SelectionChanged"
+                    FontSize="15"
+                    VerticalContentAlignment="Top"
+                    ItemsSource="{Binding SortCriteria}"
+                    Width="250"
+                    Height="30"
+                    
+                    />
+
+            </WrapPanel>
+
+        </Grid>
     </Grid>
 </UserControl>
