--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -42,7 +42,11 @@
             <DataTemplate DataType="{x:Type viewmodels:AgentTripsViewModel}">
                 <views:AgentTripsView/>
             </DataTemplate>
-            
+
+            <DataTemplate DataType="{x:Type viewmodels:AgentReservationsViewModel}">
+                <views:AgentReservationsView/>
+            </DataTemplate>
+
         </Grid.Resources>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </Grid>
