added commands to navigation

--- a/TravelApp/DesktopHost/View/AgentStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/AgentStayEatView.xaml
@@ -34,7 +34,7 @@
                             MaxWidth="439" />
 
                 <WrapPanel Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" >
-                    <Button Command="{Binding ClientStayEat}" Cursor="Hand" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Padding="2" Margin="0 0 30 0">
+                    <Button Command="{Binding NewPlace}" Cursor="Hand" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Padding="2" Margin="0 0 30 0">
                         <StackPanel Orientation="Horizontal">
                             <Viewbox Width="25" Height="25">
                                 <materialDesign:PackIcon Kind="Plus" VerticalAlignment="Center" />
